ckex-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ckex-front-service
  labels:
    name: ckex-front
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: ckex-front
---
apiVersion: v1
kind: Service
metadata:
  name: ckex-front-pc-service
spec:
  type: NodePort
  selector:
    app: ckex-front-pc
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
