ckex-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ckex-front-pc-service
                port:
                  number: 80
            path: /pc
            pathType: Prefix

    - http:
        paths:
          - backend:
              service:
                name: ckex-front-service
                port:
                  number: 80
            path: /
            pathType: Prefix
